14434
TestAnnotation.java:
{code}
public @interface TestAnnotation {
  public String parameter() default "";
}
{code}
TestClass.scala:
{code}
@TestAnnotation
class TestClass {
}
{code}
Compiling with r18493 yields:
{code}
$$ scalac TestAnnotation.java TestClass.scala
TestAnnotation.java:3: error: type AnnotationDefault is not a member of package <root>
  public String parameter() default "";
                ^
TestClass.scala:2: error: annotation TestAnnotation is missing argument parameter
@TestAnnotation
 ^
two errors found
{code}
